# case1-09032021

./: pyproject.toml
case1_09032021/: Case1_WindData_model.ipynb  Case1_WindData_statistics.ipynb
data/: WindData.csv
notebooks_html/: Case1_WindData_model.html  Case1_WindData_statistics.html
pyfiles/: Case1_WindData_model.ipynb  Case1_WindData_statistics.ipynb
